expected/main/gens/primInitPad-neg-32a.err
ERROR: "actual/main/gens/primInitPad-neg-32a.lc", line 10
external ip0SW  {primInitPad  0  SW} :: Init (Pad  0 SW)
         ^
No generated implementation: Argument value 0 is too small; must be at least 1

ERROR: "actual/main/gens/primInitPad-neg-32a.lc", line 13
external ip3S {primInitPad 3 S} :: Init (Pad 3 S)
         ^
No generated implementation: Element size 6 is not divisible by alignment 4

ERROR: "actual/main/gens/primInitPad-neg-32a.lc", line 14
external ip7S {primInitPad 7 S} :: Init (Pad 7 S)
         ^
No generated implementation: Element size 6 is not divisible by alignment 4

ERROR: "actual/main/gens/primInitPad-neg-32a.lc", line 15
external ip3U {primInitPad 3 U} :: Init (Pad 3 U)
         ^
No generated implementation: Element size 18 is not divisible by alignment 4

ERROR: "actual/main/gens/primInitPad-neg-32a.lc", line 16
external ip7U {primInitPad 7 U} :: Init (Pad 7 U)
         ^
No generated implementation: Element size 18 is not divisible by alignment 4

ERROR: Aborting after 5 previously reported errors

